<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:cnb_backgroundColor="@color/black" />


    <item
        android:id="@+id/bottom_nav_cost"
        android:icon="@drawable/ic_total_cost"
        android:title="@string/cost"
        app:cnb_backgroundColor="@color/black" />


    <item
        android:id="@+id/bottom_nav_Setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting"
        app:cnb_backgroundColor="@color/black" />
    <item
        android:id="@+id/bottom_nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="profile"
        app:cnb_backgroundColor="@color/black" />

   
</menu>