<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_Activity"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="10dp">


    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:transitionName="logo_image"
        android:src="@drawable/login_logo"
        android:contentDescription="@string/todo" />



    <TextView
        android:id="@+id/welcome_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionName="logo_text"
        android:text="@string/welcome_back"
        android:textSize="40sp"
        android:fontFamily="@font/carter_one"/>



    <TextView
        android:id="@+id/sign_in_to_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        android:textSize="18sp"
        android:fontFamily="@font/antic"/>


    <LinearLayout
        android:layout_width="392dp"
        android:layout_height="325dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:fontFamily="@font/antic"
            android:text="@string/forget_password"
            android:textColor="#000000"
            tools:targetApi="lollipop"
            tools:ignore="RtlHardcoded" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#000000"
            android:text="@string/login"
            android:textColor="#FDFBFB"
            app:backgroundTint="#000000" />


        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/sign_up"
            android:textColor="#000000"
            tools:targetApi="lollipop" />


    </LinearLayout>








</LinearLayout>