<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".password_success_Activity"
    android:background="@color/white"
    android:padding="30dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:padding="5dp"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_updated"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:fontFamily="@font/bangers"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="-80dp"
            android:textAllCaps="true"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_lock"
            android:layout_margin="20dp"
            android:contentDescription="@string/todo" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_password_has_been_updated"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:fontFamily="@font/bangers"
            android:textAlignment="center"
            android:gravity="center"/>


        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@color/black"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>







    </LinearLayout>

</LinearLayout>

