<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
<<<<<<< HEAD
    android:background="@color/white"
    android:padding="20dp"
    tools:context=".forgetpassword_Activity">

<!--    foget password-->
=======
    android:background="@color/background"
    android:padding="10dp"
    tools:context=".forgetpassword_Activity">

>>>>>>> ryan update
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<<<<<<< HEAD

=======
>>>>>>> ryan update
        <ImageView
            android:id="@+id/forget_password_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
<<<<<<< HEAD
            android:src="@drawable/ic_back" />
=======
            android:padding="8dp"
            android:src="@drawable/imgback" />
>>>>>>> ryan update

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/login_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
<<<<<<< HEAD
            android:fontFamily="@font/candal"
=======
            android:fontFamily="@font/bangers"
>>>>>>> ryan update
            android:gravity="center"
            android:text="@string/forget_password"
            android:textAlignment="center"
            android:textAllCaps="true"
<<<<<<< HEAD
            android:textColor="@color/black"
            android:textSize="30sp" />
=======
            android:textColor="@color/textColor"
            android:textSize="40sp" />
>>>>>>> ryan update


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/antic"
            android:gravity="center"
            android:text="@string/provide_your_account_s_email_for_which_you_want_to_reset_your_password"
            android:textAlignment="center"
            android:textAllCaps="true"
<<<<<<< HEAD
            android:textColor="@color/black"
=======
            android:textColor="@color/textColor"
>>>>>>> ryan update
            android:textSize="18sp" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
<<<<<<< HEAD
            android:hint="@string/e_mail_or_phone_number"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="#EFECEC"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/black">


            <com.google.android.material.textfield.TextInputEditText
=======
            android:hint="@string/e_mail"
            android:textColorHint="@color/secondary"
            app:boxBackgroundColor="@color/light"
            app:boxStrokeColor="@color/secondary"
            app:boxStrokeWidthFocused="2dp"
            app:startIconTint="@color/secondary"
            app:endIconTint="@color/secondary"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_email">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/e_mail_forget"
>>>>>>> ryan update
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />


        </com.google.android.material.textfield.TextInputLayout>


<<<<<<< HEAD
        <Button
=======

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        <Button
            android:id="@+id/btn_sent"
>>>>>>> ryan update
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
<<<<<<< HEAD
            android:background="#000"
            android:text="@string/send"
            android:textColor="@color/white" />

=======
            android:background="@color/secondary"
            android:text="@string/send"
            android:onClick="btnSendEmailCode"
            android:visibility="visible"
            android:textColor="@color/white" />

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="20dp"
    android:weightSum="1.0"
    >

            <Button
                android:id="@+id/btn_edit_email"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_width="0dip"
                android:layout_marginEnd="10dp"
                android:layout_gravity="start"
                android:background="@color/secondary"
                android:text="@string/edit_email"
                android:onClick="btnEditEmail"
                android:visibility="invisible"
                android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_resent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:layout_width="0dip"
                    android:layout_gravity="end"
                    android:background="@color/secondary"
                    android:text="@string/resend"
                    android:onClick="btnResendCode"
                    android:visibility="invisible"
                    android:textColor="@color/white" />
</LinearLayout>


        </RelativeLayout>
>>>>>>> ryan update

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/activation_code"
<<<<<<< HEAD
            android:textColorHint="@color/black"
            app:boxBackgroundColor="#EFECEC"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/ic_code"
            app:startIconTint="@color/black">


            <com.google.android.material.textfield.TextInputEditText
=======
            android:textColorHint="@color/secondary"
            app:boxBackgroundColor="@color/light"
            app:boxStrokeColor="@color/secondary"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"

            app:endIconTint="@color/secondary"
            app:startIconDrawable="@drawable/ic_code"
            app:startIconTint="@color/secondary">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activation_forget"
>>>>>>> ryan update
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />


        </com.google.android.material.textfield.TextInputLayout>


    <Button
<<<<<<< HEAD
=======
        android:id="@+id/btn_activation"
>>>>>>> ryan update
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
<<<<<<< HEAD
        android:background="#FFEB3B"
        android:text="@string/ok"
        android:textColor="@color/black" />
=======
        android:background="@color/secondary"
        android:text="@string/ok"
        android:onClick="btnConfirmEmailCode"
        android:textColor="@color/white" />
>>>>>>> ryan update

</LinearLayout>

    </androidx.core.widget.NestedScrollView>