<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_up_Activity"
    android:orientation="vertical"
    android:background="#FFFCFC"
    android:padding="20dp">




    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:transitionName="logo_image"
        android:src="@drawable/login_logo"
        android:contentDescription="@string/todo" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:fontFamily="@font/carter_one"
        android:text="welcome"
        android:textSize="50sp"
        android:textColor="#000"
        android:transitionName="logo_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:text="Sign Up to control your wi_fi"
        android:textSize="18sp"
        android:transitionName="logo_text" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">



          //username
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">




            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>


        //password
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            android:transitionName="password_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>


        // confirm password
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">




            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        //e_mail
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/e_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">




            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>


        //phone number
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>




    </LinearLayout>

// sign up
    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:background="#000"
        android:textColor="#FFF"
       />// android:transitionName="button_tran"


//Already have an account? login
    <Button
        android:id="@+id/back_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_login"
        android:background="#00000000"
        android:textColor="@color/black"/>
        //android:transitionName="login_signup_tran"/>







</LinearLayout>