<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LocationOwner.homeData.retailer_ip_settingActivity">

    <!-- TODO: Update blank fragment layout -->
    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".login_Activity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/login_logo"
                android:transitionName="logo_image" />


            <TextView
                android:id="@+id/costting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:fontFamily="@font/carter_one"
                android:text="@string/control"
                android:textColor="@color/textColor"
                android:textSize="40sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/speed"
                    android:textColorHint="@color/secondary"
                    app:boxBackgroundColor="@color/light"
                    app:boxStrokeColor="@color/secondary"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/secondary"
                    app:startIconDrawable="@drawable/time_icon"
                    app:startIconTint="@color/secondary">


                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:id="@+id/speed"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/time"
                    android:textColorHint="@color/secondary"
                    app:boxBackgroundColor="@color/light"
                    app:boxStrokeColor="@color/secondary"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/secondary"
                    app:startIconDrawable="@drawable/ic_money"
                    app:startIconTint="@color/secondary">


                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:id="@+id/time"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btn_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:onClick="startTimeCountDown"
                    android:background="@color/secondary"
                    android:text="@string/start"
                    android:textColor="@color/white" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/time_left"
                    android:textColorHint="@color/secondary"
                    app:boxBackgroundColor="@color/light"
                    app:boxStrokeColor="@color/secondary"
                    app:boxStrokeWidthFocused="2dp"

                    app:endIconTint="@color/secondary"
                    app:startIconDrawable="@drawable/ic_total_cost"
                    app:startIconTint="@color/secondary">


                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:id="@+id/timeleft"
                        android:inputType="number"
                        android:enabled="false"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</FrameLayout>