<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splash_Activity"
    android:background="#94343C42">


    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/splash_logo"
        android:src="@drawable/slash_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="360dp"
        android:layout_height="162dp"
        android:fontFamily="@font/carter_one"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_logo"
        app:layout_constraintVertical_bias="0.31" />

    <TextView
        android:id="@+id/to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:text="@string/to"
        android:textAlignment="center"
        android:textColor="#0B0A0A"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_logo"
        app:layout_constraintVertical_bias="0.612" />

    <TextView
        android:id="@+id/mcu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:text="@string/multiple_choice_user"
        android:textAlignment="center"
        android:textColor="#0B0A0A"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to" />


</androidx.constraintlayout.widget.ConstraintLayout>